// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "com/digitalasset/canton/protocol/v30/participant_reassignment.proto";
import "com/digitalasset/canton/protocol/v30/participant_transaction.proto";
import "com/digitalasset/canton/protocol/v30/topology.proto";
import "scalapb/scalapb.proto";

// Messages depending on both participant_transaction.proto and participant_reassignment.proto.

message TypedSignedProtocolMessageContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  oneof some_signed_protocol_message {
    bytes confirmation_response = 2;
    bytes confirmation_result = 3;
    bytes acs_commitment = 4;
    bytes set_traffic_purchased = 5;
  }
}

message SignedProtocolMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  repeated com.digitalasset.canton.crypto.v30.Signature signature = 1;
  bytes typed_signed_protocol_message_content = 2;
}

message EnvelopeContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  oneof some_envelope_content {
    v30.InformeeMessage informee_message = 1;
    v30.EncryptedViewMessage encrypted_view_message = 2;
    v30.UnassignmentMediatorMessage unassignment_mediator_message = 3;
    v30.AssignmentMediatorMessage assignment_mediator_message = 4;
    v30.RootHashMessage root_hash_message = 5;
    v30.TopologyTransactionsBroadcast topology_transactions_broadcast = 6;
  }
}
